# drug_exp_compatibility

./: .gitignore  0125_check_format.py  0125_check_format_2024_Drug_compatibility_dataset.xlsx.py  0125_check_format_dataset.csv.py  0125_process_data.py  0125_process_data_debug.py  0125_test_envv.py  0201_plot.py  0201_train_rf.py  0202_model_deploy_v2.py  0202_test_rf_threshold.py  0205_create_csv.py  0205_test_eddie_data_Ann_Method_rf.py  0206_inspect_pharmacofeature3d.py  0210_Compatibility_Testset_162.xlsx  0211_plot_umap.py  README.md  dataset.csv  log0205.text  log0211.txt  log_0130.txt  log_0130_new.txt  log_0210.txt  log_new.txt  model_deploy.py  model_deploy_new.py  pyproject.toml
100D_RF/: 0201_rf_predictonly.py  0210_find_failed_items.py  0210_rf_prediction_csv.py
Mordered/: 0208_Inspect_mordered.py  0208_find_magnesium.py  0208_predict_mordered.py  0208_test_eddie_data.py  0208_train_MLP.py  0208_train_rf_mordered.py  0209_find_magnesium_new.py  0210_mlp_test_eddie_162.py  0210_rf_test_eddie_162.py  0210_train_rf_mordered_new.py  0211_rf_extractParameter.py  plot.py
